# XIBIQ

./: .envexp  .gitignore  LICENSE  README.md  docker-compose.yml  how-to-change-password.md  pyproject.toml
auth/: Dockerfile.auth  alembic.ini  pyproject.toml  run.py
auth/application/: __init__.py  auth.py  authorization.py  broker.py  config.py  create_app.py  crud.py  database.py  devroute.py  redis_init.py  tokens.py  update.py
auth/application/methods/: __init__.py  get_access_payload.py
auth/application/models/: __init__.py  mapped.py  users.py
auth/application/serialized/: __init__.py  answer.py  tuned.py  users.py
auth/application/validate/: __init__.py  gentoken.py  getcloudkey.py  getcloudkeys.py  getcode.py  gettoken.py  reguser.py  users.py
auth/migrations/: env.py
auth/migrations/versions/: 1d1c6dae4e94_create_users_tables.py  2e6b277ff31e_adding_admin_field.py  (+2 more)
backend/: .gitignore  pyproject.toml
backend/auth/: run.py
backend/auth/application/: __init__.py  config.py  create_app.py  database.py
backend/auth/application/models/: mapped.py  users.py
backend/auth/application/serialize/: __init__.py  users.py
backend/auth/application/validation/: __init__.py  users.py
bot/: Dockerfile.api  alembic.ini  config.py  create_bot.py  database.py  input.py  run.py
bot/application/: config.py  create_bot.py  database.py  redis_init.py
bot/migrations/: env.py
bot/modules/: delete.py  generate.py  myphone.py  start.py
profile/: Dockerfile.profile  run.py
profile/application/: config.py  create_app.py  create_users.py  database.py
(+19 files in other folders)
