[project]
name = "xibiq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.115.12",
    "pydantic-settings>=2.9.1",
    "pydantic[email]>=2.11.7",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.3",
]
